Fixed the issue where the scroll shifted the page to the left

--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -2,6 +2,11 @@
 	background-color: rgb(255, 255, 255);
 }
 
+html {
+	overflow-x: hidden;
+	width: 100vw;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
